--- a/style.css
+++ b/style.css
@@ -9,22 +9,16 @@ body {
     font-style: normal;
     line-height: 48px;
     letter-spacing: 0.06em; 
-    /* background: url(./img/background.png);
+    background: url(./img/background.png);
     background-size: 40%;
     background-repeat: no-repeat;
-    background-position: left 100% top -40%;   */
+    background-position: left 100% top -50%;
 }  
 .wrapper {
     padding: 0 40px;
     max-width: 1920px;
     margin: 0 auto; 
     position: relative;
-
-    background: url(./img/background.png);
-    background-size: 35%;
-    background-repeat: no-repeat;
-    background-position: left 100% top 10%;  
-    
 }
 li {
     list-style-type: none;
@@ -33,19 +27,17 @@ a {
     color: black;
 }
 /* ----HEADER----- */
-/* .header_wrapper {
-    position: relative;
-} */
+
 .header {
-    padding: 10px 0 5px;
-    display: flex;
-   align-items: center;
-   /* background: white;
-   position:fixed; */
-   /* width: 90%; */
-   top: 0;
-   z-index: 1;
+       background: white;
+        font-size: 0;
+        max-width: 100%;
+        /* position: fixed;  */
+        left: 0;
+        right: 0;
+        padding: 15px 0;  
 }
+
 /* -----Select------- */
 .select {
     font-family: 'Roboto', sans-serif;
@@ -56,7 +48,8 @@ a {
                 -1px 0 0px #000, 
                 0 -1px 0px #000;
     border: none;
-    font-size: 20px;    
+    font-size: 20px;  
+    display: inline-block;  
 }
 .select:hover,
 .select:focus {
@@ -69,9 +62,15 @@ a {
 }
 /* ----Navigation------ */
 .nav {
-    display: flex;
+    /* display: flex;
+    flex-grow: 1; */
     list-style: none;
-    flex-grow: 1;
+    
+    display: inline-block;
+    width: 80%;
+}
+.nav_item {
+    display:inline-block;
 }
 .nav_item > a {
     text-decoration: none;
@@ -83,8 +82,9 @@ a {
 }
 /* ----Logo----- */
 .logo {
-    flex-basis: 15%;
-    align-items: flex-end; 
+    /* flex-basis: 15%;
+    align-items: flex-end;  */
+    display: inline-block;
 }
 .logo > img {
     max-width: 245px;
@@ -102,9 +102,7 @@ a {
     flex-basis: 35%;
     text-transform: uppercase;
     font-weight: 900; 
-    /* position: fixed; */
-    z-index: -1;
-
+    position: fixed;
 }
 .menu {
     counter-reset: section;   
@@ -129,12 +127,10 @@ a {
     display: block; 
     margin-left: 0;
 }
-
 .main {
     flex-basis: 65%;
-    /* position: absolute; */
+    position: absolute;
     left: 40%;
-    /* padding-left: 20px; */
 }
 .title_2 {
     margin-bottom: 40px;
